Adicionando Teste de Integração aos Repository, melhorando as consultas dos sistema, adicionando geração de documento adoc, separação do swagger.

--- a/domain/src/main/resources/db/changelog/init/create_db.yml
+++ b/domain/src/main/resources/db/changelog/init/create_db.yml
@@ -9,6 +9,9 @@ databaseChangeLog:
             splitStatements: true
             sql: CREATE EXTENSION IF NOT EXISTS "uuid-ossp"
             stripComments: false
+      rollback:
+        - sql:
+            sql: DROP EXTENSION "uuid-ossp"
   - changeSet:
       id: create_DOM_COUNTRY
       author: System
