--- a/etc/swagger/InsideDayOffMarkerAdmin.yml
+++ b/etc/swagger/InsideDayOffMarkerAdmin.yml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: Day Off Marker
+  title: Day Off Marker Admin
   description: |
     The purpose of the system is to improve date management by city, state, and country, as well as to control each branch of the company for better management.
     It provides calculations, queries, and date validations to optimize processes that require dates, such as invoice generation, service orders, and scheduling routines,
@@ -57,8 +57,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -97,8 +97,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -144,8 +144,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -184,8 +184,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -231,8 +231,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -271,8 +271,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -318,8 +318,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -358,8 +358,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -405,8 +405,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -445,8 +445,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -572,8 +572,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -612,8 +612,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -826,8 +826,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -867,8 +867,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -1127,8 +1127,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -1174,8 +1174,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -1381,8 +1381,8 @@ paths:
           in: query
           required: false
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
         - name: paginationFilter
           in: query
           required: true
@@ -1467,8 +1467,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -1513,8 +1513,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         content:
           application/json:
@@ -1614,8 +1614,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -1661,8 +1661,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -1785,8 +1785,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -1826,8 +1826,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -1919,8 +1919,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -1960,8 +1960,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: OK
@@ -2106,8 +2106,8 @@ paths:
           in: query
           required: false
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
         - name: tagCode
           in: query
           required: false
@@ -2386,8 +2386,8 @@ components:
           uniqueItems: true
           type: array
           items:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
         dayOfWeek:
           type: string
           enum:
@@ -2442,8 +2442,8 @@ components:
           uniqueItems: true
           type: array
           items:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
     InsideSoftwaresResponseDTOLong:
       type: object
       properties:
@@ -2484,8 +2484,8 @@ components:
           items:
             maximum: 31
             minimum: 1
-            type: integer
-            format: int64
+            type: string
+            format: uuid
     InsideSoftwaresResponseDTOListLong:
       type: object
       properties:
@@ -2494,8 +2494,8 @@ components:
         data:
           type: array
           items:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
         insidePaginatedDTO:
           $ref: '#/components/schemas/InsidePaginatedDTO'
     FixedHolidayRequestDTO:
@@ -2536,8 +2536,8 @@ components:
           uniqueItems: true
           type: array
           items:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
     ConfigurationLimitYearRequestDTO:
       required:
         - numberBackYears
@@ -2572,8 +2572,8 @@ components:
           uniqueItems: true
           type: array
           items:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
     DayDTO:
       type: object
       properties:
@@ -2944,8 +2944,8 @@ components:
           uniqueItems: true
           type: array
           items:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
     CityHolidayDeleteRequestDTO:
       required:
         - holidaysId
@@ -2955,5 +2955,5 @@ components:
           uniqueItems: true
           type: array
           items:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
