--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.4</version>
+        <version>3.1.5</version>
         <relativePath/>
     </parent>
 
@@ -38,9 +38,9 @@
         <maven.compiler.target>21</maven.compiler.target>
         <java.version>21</java.version>
 
-        <spring-boot.version>3.1.4</spring-boot.version>
+        <spring-boot.version>3.1.5</spring-boot.version>
         <spring.framework.version>6.0.12</spring.framework.version>
-        <spring-data-redis.version>3.1.4</spring-data-redis.version>
+        <spring-data-redis.version>3.1.5</spring-data-redis.version>
 
         <checkstyle-maven-plugin.version>3.3.0</checkstyle-maven-plugin.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
@@ -49,7 +49,7 @@
 
         <postgresql.version>42.6.0</postgresql.version>
         <liquibase.version>4.23.2</liquibase.version>
-        <querydsl.version>5.0.0</querydsl.version>
+        <op_querydsl.version>5.1</op_querydsl.version>
 
         <mockito.version>5.5.0</mockito.version>
         <mockito-inline.version>5.2.0</mockito-inline.version>
@@ -63,7 +63,7 @@
         <testcontainers-bom.version>1.19.0</testcontainers-bom.version>
 
         <snakeyaml.version>2.1</snakeyaml.version>
-        <json.version>20230618</json.version>
+        <json.version>20231013</json.version>
     </properties>
 
     <dependencyManagement>
@@ -170,16 +170,16 @@
             <!-- Spring End -->
             <!-- Database Start -->
             <dependency>
-                <groupId>com.querydsl</groupId>
+                <groupId>io.github.openfeign.querydsl</groupId>
                 <artifactId>querydsl-jpa</artifactId>
-                <version>${querydsl.version}</version>
+                <version>${op_querydsl.version}</version>
                 <classifier>jakarta</classifier>
             </dependency>
             <dependency>
-                <groupId>com.querydsl</groupId>
+                <groupId>io.github.openfeign.querydsl</groupId>
                 <artifactId>querydsl-apt</artifactId>
                 <scope>provided</scope>
-                <version>${querydsl.version}</version>
+                <version>${op_querydsl.version}</version>
                 <classifier>jakarta</classifier>
             </dependency>
             <dependency>
