--- a/server/application-administration/pom.xml
+++ b/server/application-administration/pom.xml
@@ -113,32 +113,81 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.4.13</version>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>2.2.4</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>2.3.9</version>
+                    </dependency>
+                    <!-- Comment this section to use the default AsciidoctorJ artifact provided by the plugin -->
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj</artifactId>
+                        <version>2.5.10</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <sourceDirectory>${project.parent.basedir}/etc/documentation/doc</sourceDirectory>
+                    <sourceDocumentName>DayOffMarker_Doc.adoc</sourceDocumentName>
+                </configuration>
                 <executions>
                     <execution>
-                        <id>tag-version</id>
+                        <id>generate-pdf-doc</id>
+                        <phase>generate-resources</phase>
                         <goals>
-                            <goal>build</goal>
-                            <goal>tag</goal>
+                            <goal>process-asciidoc</goal>
                         </goals>
                         <configuration>
-                            <tag>${project.version}</tag>
+                            <backend>pdf</backend>
+                            <attributes>
+                                <source-highlighter>rouge</source-highlighter>
+                                <icons>font</icons>
+                                <pagenums/>
+                                <toc/>
+                                <idprefix/>
+                                <idseparator>-</idseparator>
+                            </attributes>
                         </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <contextDirectory>${project.parent.basedir}</contextDirectory>
-                    <dockerfile>${project.parent.basedir}/Dockerfile.administration</dockerfile>
-                    <repository>br.com.insidesoftwares/inside_dayoffmarker_administration</repository>
-                    <finalName>inside_dayoffmarker_administration</finalName>
-                </configuration>
             </plugin>
         </plugins>
     </build>
 
     <profiles>
+        <profile>
+            <id>dev</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>dockerfile-maven-plugin</artifactId>
+                        <version>1.4.13</version>
+                        <executions>
+                            <execution>
+                                <id>tag-version</id>
+                                <goals>
+                                    <goal>build</goal>
+                                    <goal>tag</goal>
+                                </goals>
+                                <configuration>
+                                    <tag>${project.version}</tag>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <contextDirectory>${project.parent.basedir}</contextDirectory>
+                            <dockerfile>${project.parent.basedir}/Dockerfile.administration</dockerfile>
+                            <repository>br.com.insidesoftwares/inside_dayoffmarker_administration</repository>
+                            <finalName>inside_dayoffmarker_administration</finalName>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>analyze</id>
             <build>
@@ -204,6 +253,7 @@
                             <finalName>inside_dayoffmarker</finalName>
                         </configuration>
                     </plugin>
+
                 </plugins>
             </build>
         </profile>
