--- a/server/application-search/pom.xml
+++ b/server/application-search/pom.xml
@@ -142,33 +142,40 @@
                     <target>21</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.4.13</version>
-                <executions>
-                    <execution>
-                        <id>tag-version</id>
-                        <goals>
-                            <goal>build</goal>
-                            <goal>tag</goal>
-                        </goals>
-                        <configuration>
-                            <tag>${project.version}</tag>
-                        </configuration>
-                    </execution>
-                </executions>
-                <configuration>
-                    <contextDirectory>${project.parent.basedir}</contextDirectory>
-                    <dockerfile>${project.parent.basedir}/Dockerfile.search</dockerfile>
-                    <repository>br.com.insidesoftwares/inside_dayoffmarker_search</repository>
-                    <finalName>inside_dayoffmarker_search</finalName>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
     <profiles>
+        <profile>
+            <id>dev</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>dockerfile-maven-plugin</artifactId>
+                        <version>1.4.13</version>
+                        <executions>
+                            <execution>
+                                <id>tag-version</id>
+                                <goals>
+                                    <goal>build</goal>
+                                    <goal>tag</goal>
+                                </goals>
+                                <configuration>
+                                    <tag>${project.version}</tag>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <contextDirectory>${project.parent.basedir}</contextDirectory>
+                            <dockerfile>${project.parent.basedir}/Dockerfile.search</dockerfile>
+                            <repository>br.com.insidesoftwares/inside_dayoffmarker_search</repository>
+                            <finalName>inside_dayoffmarker_search</finalName>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>analyze</id>
             <build>
